--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "tailwindcss": "^3.0.24"
   },
   "scripts": {
-    "dev": "npx tailwindcss-cli -i ./src/style.css -o ./src/tailwind.css -w"
+    "dev": "npx tailwindcss-cli -i ./src/style.css -o ./src/tailwind.css -w",
+    "build": "npx tailwindcss-cli -i ./src/style.css -o ./src/tailwind.css -w" 
   },
   "repository": {
     "type": "git",
