--- a/package.json
+++ b/package.json
@@ -1,27 +1,25 @@
 {
-  "name": "hello",
-  "version": "1.0.0",
-  "description": "Portfolio project",
-  "main": "tailwind.config.js",
-  "dependencies": {},
-  "devDependencies": {
-    "tailwindcss": "^3.0.24"
-  },
+  "name": "vite-project",
+  "private": true,
+  "version": "0.0.0",
   "scripts": {
-    "dev": "npx tailwindcss-cli -i ./src/style.css -o ./src/tailwind.css -w",
-    "build": "npx tailwindcss-cli -i ./src/style.css -o ./src/tailwind.css -w" 
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/prynssmaia/hello.git"
+  "dependencies": {
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0"
   },
-  "keywords": [
-    "tailwindcss"
-  ],
-  "author": "Prynss Maia",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/prynssmaia/hello/issues"
-  },
-  "homepage": "https://github.com/prynssmaia/hello#readme"
+  "devDependencies": {
+    "@types/react": "^18.0.0",
+    "@types/react-dom": "^18.0.0",
+    "@vitejs/plugin-react": "^1.3.0",
+    "autoprefixer": "^10.4.7",
+    "postcss": "^8.4.14",
+    "prettier": "^2.7.1",
+    "prettier-plugin-tailwindcss": "^0.1.11",
+    "tailwindcss": "^3.1.4",
+    "vite": "^2.9.9"
+  }
 }
